2008-05-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pdf.c (ReadPDFImage): Properly deal with reading rotated
	PDFs.

2008-05-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: GraphicsMagick 1.2.2 released.

2008-05-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/composite.c (CompositeImage): Don't leak displacement
	image when Displacement composition is used.
	* PerlMagick/demo/demo.pl: Use segmentation parameters which are
	more appropriate for the image used.
	* magick/image.h: Add MaxRGBDouble, MaxRGBFloat, MaxMapDouble, and
	MaxMapFloat for use in cases where a floating point constant is
	useful.
	(RoundDoubleToQuantum): New macro to round a 'double' to a quantum.
	(RoundFloatToQuantum): New macro to round a 'float' to a quantum.
	* magick/alpha_composite.h (AlphaComposite): Fix alpha composite
	when both pixels contain transparency.

2008-05-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/composite.c (CompositeImage): CMYK copy composition
	operators automatically set the image colorspace to CMYK.
	* coders/tiff.c (WriteTIFFImage): CMYK must take precedence over
	JPEG compression.  We don't support JPEG compression in TIFF with
	CMYK.

2008-05-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Don't accidentially convert CMYK
	images to RGB.
	* magick/composite.c (CompositeImage): Handle CopyBlack properly
	for CMYK images.
	* magick/command.c (CompositeImageCommand): Support CopyCyan,
	CopyMagenta, CopyYellow, and CopyBlack.
	* magick/composite.c (CompositeImage): Preserve canvas image
	colorspace.

2008-05-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (ConvertImageCommand, MogrifyImageCommand,
	DisplayImageCommand): Gamma multiple channel syntax was broken.
	Now it is fixed.

2008-05-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Add OpenMP support library to LIBS so that