@@ -22,7 +22,7 @@
 %                                                                             %
 %                              Software Design                                %
 %                            Christopher R. Hawks                             %
-                               December 2001                                 %
+%                               December 2001                                 %
 %                                                                             %
 %                                                                             %
 %                                                                             %
@@ -467,6 +467,21 @@ static Image *ReadPALMImage(const ImageInfo *image_info,
   compressionType = ReadBlobByte(image);
   (void) ReadBlobMSBShort(image); /* pad */
 
+  (void) LogMagickEvent(CoderEvent,GetMagickModule(),
+                        "Size=%lux%lu, bytes_per_row=%lu, flags=%lu, bits_per_pixel=%lu",
+                        image->columns, image->rows, bytes_per_row, flags, bits_per_pixel);
+  
+  (void) LogMagickEvent(CoderEvent,GetMagickModule(),
+                        "transparentIndex=%lu, compressionType=%lu",
+                        transparentIndex, compressionType);
+
+  /*
+    Validate bits per pixel.
+  */
+  if ((bits_per_pixel < 1) ||
+      ((bits_per_pixel > 8) && (bits_per_pixel != 16)))
+    ThrowReaderException(CorruptImageError,UnrecognizedBitsPerPixel,image);
+
   /*
     Initialize image colormap.
   */
@@ -490,9 +505,11 @@ static Image *ReadPALMImage(const ImageInfo *image_info,
             for(i = 0; i < (long) count; i++)
               {
                 (void) ReadBlobByte(image);
-                image->colormap[255 - i].red = ScaleCharToQuantum(ReadBlobByte(image));
-                image->colormap[255 - i].green = ScaleCharToQuantum(ReadBlobByte(image));
-                image->colormap[255 - i].blue = ScaleCharToQuantum(ReadBlobByte(image));
+                index=255 - i;
+                VerifyColormapIndex(image,index);
+                image->colormap[index].red = ScaleCharToQuantum(ReadBlobByte(image));
+                image->colormap[index].green = ScaleCharToQuantum(ReadBlobByte(image));
+                image->colormap[index].blue = ScaleCharToQuantum(ReadBlobByte(image));
               }
           }
         for(; i < (long) (1L << bits_per_pixel); i++)
@@ -508,9 +525,11 @@ static Image *ReadPALMImage(const ImageInfo *image_info,
                 transpix.green = (unsigned char) (ReadBlobByte(image) * MaxRGB / 63);
                 transpix.blue = (unsigned char) (ReadBlobByte(image) * MaxRGB / 31);
               }
-            image->colormap[255 - i].red = ScaleCharToQuantum(PalmPalette[i][0]);
-            image->colormap[255 - i].green = ScaleCharToQuantum(PalmPalette[i][1]);
-            image->colormap[255 - i].blue = ScaleCharToQuantum(PalmPalette[i][2]);
+            index=255 - i;
+            VerifyColormapIndex(image,index);
+            image->colormap[index].red = ScaleCharToQuantum(PalmPalette[i][0]);
+            image->colormap[index].green = ScaleCharToQuantum(PalmPalette[i][1]);
+            image->colormap[index].blue = ScaleCharToQuantum(PalmPalette[i][2]);
           }
       }
 
@@ -603,6 +622,7 @@ static Image *ReadPALMImage(const ImageInfo *image_info,
               if ((unsigned long) (ptr - one_row) >= bytes_per_row)
                 ThrowReaderException(CorruptImageError,CorruptImage,image);
               index =(IndexPacket) (mask - (((*ptr) & (mask << bit)) >> bit));
+              VerifyColormapIndex(image,index);
               indexes[x] = index;
               *q++ = image->colormap[index];
               if (!bit)
